# AMR_Proj

./: .gitignore  README.md
Proj/dev/: joytest.py
Proj/dev-0716/: frames.gv  map_1721309672.pgm
Proj/dev-0716/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
Proj/dev-0716/log/: latest_build
Proj/dev-0716/src/MicroRos_24/: .cproject  MicroRos_24 Default.launch
Proj/dev-0716/src/articubot_one/launch/: robot.launch.py
Proj/dev-0716/src/articubot_one/map/: my_map_save.pgm  my_map_save.yaml  my_map_serial.data  my_room2_save.pgm  my_room2_save.yaml  my_room2_serial.data  my_room_save.pgm  my_room_save.yaml  my_room_serial.data
Proj/dev-0716/src/omo_r1mini_bringup/: setup.cfg
Proj/dev-0716/src/omo_r1mini_description/launch/: omo_r1mini_description.launch.py
Proj/dev-0716/src/omo_r1mini_navigation2/launch/: navigation2.launch.py  navigation2_rviz.launch.py
Proj/dev-0716/src/omo_r1mini_navigation2/map/: map.pgm  map_.pgm  map_mask.yaml
Proj/dev-0716/src/omo_r1mini_navigation2/param/: omo_r1mini.yaml  omo_r1mini_2.22.yaml  omo_r1mini_4:04.yaml  omo_r1mini_4:33.yaml
Proj/dev-0716/src/ydlidar_ros2_driver/params/: ydlidar.yaml
Proj/dev-0716_1/: map_1721309672.yaml
Proj/dev-0716_1/src/omo_r1mini_navigation2/launch/: navigation2.launch.py
Proj/dev-0716_1/src/omo_r1mini_navigation2/map/: 0716.pgm  0716.yaml  map.yaml  map_.yaml
Proj/dev-last/.metadata/: .log4j2.xml  version.ini
Proj/dev-last/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
Proj/dev-last/.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
Proj/dev-last/.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
Proj/dev-last/.metadata/.plugins/org.eclipse.ui.workbench.texteditor/: dialog_settings.xml
Proj/dev-last/install/: local_setup.sh  setup.sh
Proj/dev-last/log/: latest_build  latest_clean
Proj/dev-last/src/agent_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
Proj/dev-last/src/agent_ws/log/: latest_build
Proj/dev-last/src/articubot_one/: package.xml
Proj/dev-last/src/etc/.metadata/: version.ini
Proj/dev-last/src/etc/MicroRos_24/: .project
Proj/dev-last/src/etc/MicroRos_26/: .cproject  MicroRos_26.ioc
Proj/dev-last/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
Proj/dev-last/src/log/: latest_build
Proj/dev-last/src/stella_ahrs/: CMakeLists.txt
Proj/dev-last/src/stella_ahrs/include/: MwSerial.hpp  SerialCOM.hpp  UsbPacket.hpp  listener.h
Proj/dev-last/src/stella_ahrs/launch/: stella_ahrs_launch.py
Proj/dev-last/src/stella_ahrs/src/: MwAHRS.cpp  (+1 more)
Proj/dev/install/: local_setup.sh  setup.sh
Proj/dev/log/: latest_build
Proj/dev/sixpair/: sixpair
Proj/dev/src/.metadata/: version.ini
Proj/dev/src/MicroRos_24/: .cproject  MicroRos_24.ioc
Proj/dev/src/diffdrive_stm/: CMakeLists.txt  README.md  package.xml  robot_hardware.xml
Proj/dev/src/diffdrive_stm/include/diffdrive_stm/: config.h  diffdrive_stm.h  fake_robot.h  my_node.h  wheel.h
Proj/dev/src/diffdrive_stm/launch/: fake_robot.launch.py  test_robot.launch.py
Proj/dev/src/diffdrive_stm/src/: diffdrive_robot.cpp  diffdrive_stm.cpp  fake_robot.cpp  my_node.cpp  wheel.cpp
Proj/etc/MicroRos_14/: .cproject  .project  MicroRos_14 Default.launch  MicroRos_14.ioc
Proj/etc/MicroRos_14/.metadata/: version.ini
Proj/etc/param/: recent.yaml  test.txt
Proj/etc/stella_ahrs/launch/: stella_ahrs_launch.py
Proj/etc/stella_ahrs/mw/: mw_ahrs.cpp
Proj/etc/touch_gui/: 0717.py  0718.py  0719.py  0719_1.py  0722.py  0722_1.py  0722_ems_twist_split.py  0722_std.py  0722_test.py  0722_test_1.py  0723_image.py  0723_image_test.py  0723_rviz2.py  0723_rviz2_test.py  0723_test.py  0723_test_map.py  1.py  Save_point.json  gui_0709.py  my_rviz.rviz  my_rviz_config.rviz  requirement.txt  std_GUI.py  sum.py  test.py  touch_gui.rviz
Proj/etc/touch_gui/gui/: CMakeLists.txt  package.xml  setup.py
Proj/etc/touch_gui/gui/src/gui/: CMakeLists.txt  package.xml  setup.cfg  setup.py
Proj/etc/touch_gui/gui/srv/: SaveGoal.srv
com_proj/Micro_Ros_versions/  Versions/.metadata/: .log4j2.xml  version.ini
com_proj/Micro_Ros_versions/  Versions/MicroRos_24/: .cproject  MicroRos_24.ioc
com_proj/Micro_Ros_versions/  Versions/MicroRos_25/: .project  MicroRos_25 Default.launch  MicroRos_25.ioc
com_proj/Micro_Ros_versions/  Versions/MicroRos_26/: .cproject  .project  MicroRos_26 Default.launch  MicroRos_26.ioc
com_proj/Micro_Ros_versions/  Versions/MicroRos_27/: .project  Makefile  MicroRos_27 Default.launch
com_proj/Micro_Ros_versions/  Versions/MicroRos_28/: MicroRos_28.ioc
com_proj/Micro_Ros_versions/  Versions/MicroRos_28_this/: .cproject  .mxproject  .project  MicroRos_28 Default.launch
com_proj/Micro_Ros_versions/  Versions/MicroRos_29/: .project  MicroRos_29 Default.launch
com_proj/dev_src_0708/src/.metadata/: .log4j2.xml  version.ini
com_proj/dev_src_0708/src/MicroRos_24/: .project
foxy/: Dockerfile  bashrc  entrypoint.sh  turtlebot3.pgm  turtlebot3.yaml
foxy/.devcontainer/: Dockerfile  devcontainer.json
foxy/install/: local_setup.sh  setup.sh
foxy/log/: latest_build
humble/: Dockerfile  devcontainer.json  entrypoint.sh
humble/.devcontainer/: Dockerfile
rasp5_foxy/: Dockerfile  devcontainer.json
rasp5_foxy/.devcontainer/: Dockerfile  README.md
(+661 files in other folders)
