<?xml version="1.0"?>
<package format="2">
  <name>diffdrive_stm</name>
  <version>0.0.1</version>
  <description>Provides an interface between diff_drive_controller and an Arduino.</description>

  <maintainer email="josh.newans@gmail.com">Josh Newans</maintainer>
  <author email="josh.newans@gmail.com">Josh Newans</author>
  <license>BSD</license>


  <!-- <url type="website">http://wiki.ros.org/diffdrive_arduino</url> -->
  <url type="bugtracker">https://github.com/joshnewans/diffdrive_stm/issues</url>
  <url type="repository">https://github.com/joshnewans/diffdrive_stm</url>



  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>hardware_interface</depend>
  <depend>controller_manager</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>



  <export>
    <build_type>ament_cmake</build_type>
  </export>

  
</package>
